
[package]
name    = "gli-rs"
version = "0.3.1"
authors = ["Houjuu-Nue <usami-ssc@protonmail.com>"]
edition = "2018"
build   = "build/build.rs"

homepage    = "https://github.com/Houjuu-Nue/gli-rs"
repository  = "https://github.com/Houjuu-Nue/gli-rs"
description = "Rust binding for OpenGL Image(GLI)"
keywords    = ["Graphics", "gli", "Texture"]
license     = "MIT"
readme      = "README.md"

include = [
    "src/*",
    "build/bindings.rs",
    "build/build.rs",
    "Cargo.toml",
    "vendors/gli/external/*",
    "vendors/gli/gli/*",
    "wrapper/*",
]

[badges]
azure-devops = { project = "Houjuu-Nue/gli-rs", pipeline = "Houjuu-Nue.gli-rs", build="3" }

[dependencies]
failure = "0.1.5"

[build-dependencies]
cc = { version = "1.0.31", features = ["parallel"] }
bindgen = { version = "0.49.0", optional = true }

[features]
bindings = ["bindgen"] # use this feature to enable binding generation.
rc_debug = []

[profile.release]
opt-level = 3
lto = true


[[example]]
name = "texture"
