
[package]
name    = "gli-rs"
version = "0.4.0"
authors = ["unknownue <usami-ssc@protonmail.com>"]
edition = "2018"
build   = "build/build.rs"

homepage    = "https://github.com/unknownue/gli-rs"
repository  = "https://github.com/unknownue/gli-rs"
description = "Rust binding for OpenGL Image(GLI)"
keywords    = ["Graphics", "gli", "Texture"]
license     = "MIT"
readme      = "README.md"

include = [
    "src/*",
    "build/bindings.rs",
    "build/build.rs",
    "Cargo.toml",
    "vendors/gli/external/*",
    "vendors/gli/gli/*",
    "wrapper/*",
]

[badges]
azure-devops = { project = "unknownue/gli-rs", pipeline = "unknownue.gli-rs", build="3" }

[dependencies]
failure = "0.1.5"

[build-dependencies]
cc = { version = "1.0.50", features = ["parallel"] }
bindgen = { version = "0.53.1", optional = true }

[features]
# Use 'cargo build --features bindings' to rebuild the binding.rs
bindings = ["bindgen"] # use this feature to enable binding generation.
rc_debug = []

[profile.release]
opt-level = 3
lto = true


[[example]]
name = "texture"
path = "examples/texture.rs"
